crates/nash-report/tests/parse/expression/snapshots/parse__expression__variable__error_reserved_if.snap
---
source: crates/nash-report/tests/parse/expression/variable.rs
assertion_line: 5
description: "Code:\n\nif"
info: diagnostic
---
nash::syntax

  × Expected an expression in the `value` definition.
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
