crates/nash-report/tests/parse/expression/snapshots/parse__expression__variable__error_reserved_trait.snap
---
source: crates/nash-report/tests/parse/expression/variable.rs
assertion_line: 20
description: "Code:\n\ntrait"
info: diagnostic
---
nash::syntax

  × Expected an expression in the `value` definition.
   ╭─[src/Main.nash:1:1]
 1 │ trait
   · ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
